<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="@dimen/spacing_md">
    <TextView android:id="@+id/paymentFormInstruction" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_sm" android:text="@string/ocr_review_instruction" android:textAppearance="@style/TextAppearance.Kindergarten.BodyMedium" />
    <TextView android:id="@+id/paymentOcrStatus" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_sm" android:text="@string/ocr_processing" android:textAppearance="@style/TextAppearance.Kindergarten.BodyMedium" />
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/payment_receipt_number"><com.google.android.material.textfield.TextInputEditText android:id="@+id/paymentReceiptNumberInput" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" /></com.google.android.material.textfield.TextInputLayout>
    <Spinner android:id="@+id/childSpinner" android:layout_width="match_parent" android:layout_height="@dimen/touch_target" />
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/amount"><com.google.android.material.textfield.TextInputEditText android:id="@+id/paymentAmountInput" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="numberDecimal" /></com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/date"><com.google.android.material.textfield.TextInputEditText android:id="@+id/paymentDateInput" android:layout_width="match_parent" android:layout_height="wrap_content" /></com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/note"><com.google.android.material.textfield.TextInputEditText android:id="@+id/paymentNoteInput" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="top|start" android:inputType="textCapSentences|textMultiLine" android:maxLines="3" android:minLines="2" /></com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton android:id="@+id/scanPaymentReceiptButton" style="@style/Widget.Material3.Button.OutlinedButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/retake_photo" />
</LinearLayout>
