<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/surface">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="@dimen/spacing_md">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/payment_status" android:textAppearance="@style/TextAppearance.Kindergarten.HeadlineSmall" />
        <com.google.android.material.button.MaterialButton android:id="@+id/addChildButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_sm" android:text="@string/add_child" />
        <com.google.android.material.button.MaterialButton android:id="@+id/importChildrenButton" style="@style/Widget.Material3.Button.OutlinedButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/import_children" />
        <TextView android:id="@+id/summaryText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_md" android:lineSpacingExtra="4dp" android:text="@string/no_data" android:textAppearance="@style/TextAppearance.Kindergarten.BodyLarge" />
        <LinearLayout android:id="@+id/statusContainer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_md" android:orientation="vertical" />
    </LinearLayout>
</ScrollView>
